k8s/mango-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mango-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
        - name: database
          image: mongo:3.2.4
          ports:
            - containerPort: 27017
