k8s/mango-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mango-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 27017
      targetPort: 27017
